packages/styles/src/components/navigation/app_bar.scss
@import '../../base.scss';
@import '../../vuuui.scss';

.vuuui-app-bar {
  @extend .vuuui-base;
  display: flex;

  position: relative;
  justify-content: space-between;
  align-items: center;
  gap: var(--vuuui-padding--half);
  backdrop-filter: blur(var(--vuuui-blur-length--x2));
  background-color: rgba(var(--vuuui-color-bg--rgb), 0.88);
  padding: 0 var(--vuuui-padding--half);
  min-height: var(--vuuui-padding--x3);

  .vuuui-app-bar-section-left {
    display: flex;
    align-items: center;
    gap: var(--vuuui-padding--half);
    overflow: hidden;

    .vuuui-app-bar-leading {
    }

    .vuuui-app-bar-title {
      flex: 1;
      overflow-x: hidden;
      overflow-x: clip;
      font-weight: bold;
      font-size: 1.1rem;
      text-overflow: ellipsis;
    }
  }

  .vuuui-app-bar-actions {
    display: flex;
    align-items: center;
    gap: var(--vuuui-padding--small);
  }
}

